--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ beautifulsoup4==4.12.3
 Django==4.2.17
 django-bootstrap==0.2.4
 django-bootstrap-v5==1.0.11
+gunicorn==23.0.0
+packaging==24.2
 soupsieve==2.6
 sqlparse==0.5.3
 tzdata==2024.2
